fix box alignments

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1882,7 +1882,7 @@ table a:hover{
     color: #363636;
     font-size: 12px;
     line-height: 18px;
-    min-height: 65px;
+    min-height: 72px;
 }
 #grid-view .white-box .box-wrapper .border-bottom {
     width:300px;
